swager implementation done