@@ -6,8 +6,12 @@ import org.springframework.context.annotation.Configuration;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.servers.Server;
-import java.util.List;
+import io.swagger.v3.oas.models.tags.Tag;
+import io.swagger.v3.oas.models.security.SecurityScheme;
+import io.swagger.v3.oas.models.security.SecurityRequirement;
 
+import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 public class SwaggerConfig {
@@ -18,7 +22,24 @@ public class SwaggerConfig {
                 .info(new Info()
                         .title("Journal APP APIs")
                         .description("By Dhiraj Kumar"))
-                        .servers(List.of(new Server().url("http://localhost:9090").description("localhost"),new Server().url("http://localhost:9091").description("prod")))
-                        ;
+                .servers(List.of(new Server().url("http://localhost:9090").description("localhost"),
+                        new Server().url("http://localhost:9091").description("prod")))
+                .tags(
+                        Arrays.asList(
+                                new Tag().name("Public APIs"),
+                                new Tag().name("User APIs"),
+                                new Tag().name("JournalEntry APIs"),
+                                new Tag().name("Admin APIs")
+                        ))
+                // Adding JWT security configuration
+                .addSecurityItem(new SecurityRequirement().addList("bearerAuth"))
+                .components(new io.swagger.v3.oas.models.Components()
+                        .addSecuritySchemes("bearerAuth", new SecurityScheme()
+                                .type(SecurityScheme.Type.HTTP)
+                                .scheme("bearer")
+                                .bearerFormat("JWT")
+                                .in(SecurityScheme.In.HEADER)
+                                .name("Authorization")
+                                .description("JWT Authorization header using the Bearer scheme. Example: \"Authorization: Bearer {token}\"")));
     }
 }
